--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<a href="#main">Biodata</a>
 </nav>
 <header id="welcome-section" class="container-fluid">
-	<a id="profile-link" href="#" target="_blank"><img src="Photo.jpeg" width="150px"></a>
+	<a id="profile-link" href="#" target="_blank"><img src="Photo.jpg" width="150px"></a>
 	<h1>Walovi Lestari Nurrafa</h1>
 	<p>Class of 2020</p>
   <p>Informatics Engineering of Universitas Lampung</p>
@@ -30,7 +30,7 @@
         <p>She is currently studying at Universitas Lampung majoring Informatics Engineering.</p>
         <br>
         <h1>Organizational Experience</h1>
-        <a id="profile-link" href="#" target="_blank"><img src="Organization Exp.jpeg" width="500px"></a>
+        <a id="profile-link" href="#" target="_blank"><img src="Organization Exp.jpg" width="500px"></a>
     </div>
 	<div id="edu">
        
