--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>TITLE PAGE</title>
+	<title>Biodata Walovi Lestari Nurrafa</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -30,7 +30,7 @@
         <p>She is currently studying at Universitas Lampung majoring Informatics Engineering.</p>
         <br>
         <h1>Organizational Experience</h1>
-        <a id="profile-link" href="#" target="_blank"><img src="Organization Exp.jpg" width="300px"></a>
+        <a id="experience-link" href="#" target="_blank"><img src="Organization Exp.jpg" width="300px"></a>
     </div>
 	<div id="edu">
        
